--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -7,6 +7,10 @@
     padding: 3rem;
 }
 
+html{
+    min-width: 100vw;
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -39,6 +43,15 @@ body{
     .home-title{
         width: 20rem;
         font-size: 3rem;
+    }
+    .home-description{
+        width: 300px
+    }
+
+    lead-magnet{
+        .input-col{
+            max-width: 200px
+        }
     }
 }
 
@@ -121,6 +134,79 @@ body{
         .description{
             font-size: 0.9rem;
             color: #ffffffaa;
+        }
+    }
+}
+
+.sec-orboarding{
+    .intro{
+        @extend .sec-features, .intro
+    }
+
+    .steps{
+        padding: 0 7rem 5rem 7rem;
+        display: flex;
+        // max-width: 992px;
+        align-items: center;
+        justify-content: center;
+    }
+    .step-separator{
+        flex: 1;
+        border-top: 2px solid #ddd;
+        margin: 0 1rem;
+    }
+}
+
+.sec-footer-cta{
+    background-color: components.$color-footer;
+    padding: 5rem;
+    background-image: url(../assets/imagenes/footer.png);
+    background-repeat: no-repeat;
+    background-position: 100%;
+    .footer-cta{
+        width: 50%;
+        .cta-title{
+            font-size: 2rem;
+        }
+        .cta-description{
+            font-size: 1.1rem;
+        }
+    }
+
+    
+}
+
+
+@media(max-width: 768px){
+    .sec-orboarding{
+        .steps{
+            flex-direction: column;
+            .icon-desc{
+                text-align: center;
+            }
+        }
+    }
+
+    .sec-footer-cta{
+        background-image: none;
+        .footer-cta{
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .sec-benefits{
+        .intro{
+            text-align: center;
+        }
+        .intro h3{
+            font-size: 2rem;
+        }
+    }
+
+    .sec-features{
+        .intro{
+            font-size: 1rem;
         }
     }
 }
